# simulation2024

./: .gitignore  CMakeLists.txt  README.md  changelog.md  package.xml
config/: bridge_config copy.yaml  joint_names_Open_Source_Assembly.yaml
hooks/: README.md  simulation2024.sh.in
include/simulation2024/: README.md
launch/: aruco_marker.launch.py  camera_test.launch.py  deadblow_mallet.launch.py  heimdall.launch.py  lidar_test.launch.py  sensor_test.launch.py  thermal_test.launch.py  wanderer_II.launch.py  water_bottle.launch.py  world.launch.py
models/: README.md
models/aruco_markers/: arucoMarker0.dae  arucoMarker1.dae  arucoMarker2.dae  arucoMarker3.dae  aruco_marker.xacro
models/deadblow_mallet/: mallet.urdf
models/heimdall/: Camera.STL  Motor_Pod_1.STL  Motor_Pod_2.STL  Rear_Reference.STL  Simplified_Hinge.STL  heimdall.xacro
models/sensors/: camera_test.xacro  lidar_test.xacro  thermal_test.xacro
models/wanderer_II/: Differential.STL  Front_Camera.STL  Fumunda_Camera.STL  LB_Wheel.STL  LF_Wheel.STL  Left_Boguie.STL  Open_Source_Assembly.csv  Open_Source_Assembly.xacro  RB_Wheel.STL  RF_Wheel.STL  Right_Bougie.STL  base_link.STL
models/water_bottle/: water_bottle.xacro
scripts/: mavros_spoofer_node.py
src/: README.md
textures/: README.md  marsskybox.dds
worlds/: README.md  world2.sdf  world3.sdf
